--- a/config_sample.env
+++ b/config_sample.env
@@ -9,6 +9,7 @@ TELEGRAM_HASH = ""                          # Require restart after changing it 
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
+SET_COMMANDS = ""                           # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
@@ -34,6 +35,9 @@ RCLONE_SERVE_URL = ""
 RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
+# MegaSDK
+MEGA_EMAIL = ""
+MEGA_PASSWORD = ""
 # JDownloader
 JD_EMAIL = ""
 JD_PASS = ""
