Delete Links config
Signed-off-by: clyfly <deni@xyradcloud.my.id>

--- a/config_sample.env
+++ b/config_sample.env
@@ -13,6 +13,7 @@ SET_COMMANDS = ""                           # Require restart after changing it 
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
+DELETE_LINKS = ""
 STATUS_LIMIT = "10"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
@@ -39,8 +40,8 @@ RCLONE_SERVE_PASS = ""
 MEGA_EMAIL = ""
 MEGA_PASSWORD = ""
 # JDownloader
-JD_EMAIL = ""
-JD_PASS = ""
+JD_EMAIL = "" #Not Working on heroku
+JD_PASS = "" # Not Working on heroku
 # Update
 UPSTREAM_REPO = ""
 UPSTREAM_BRANCH = ""
