--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ bencoding
 cinemagoer
 cloudscraper
 dnspython
+electrogram
 feedparser
 flask
 gevent
@@ -32,7 +33,6 @@ pycryptodome
 python-dotenv
 pyshorteners
 python-magic
-pyrofork==2.2.11
 qbittorrent-api
 requests
 speedtest-cli
