rebase deploy branch
Signed-off-by: clyfly <deni@xyradcloud.my.id>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,11 @@
-aiohttp
 aiofiles
 aioshutil
-anytree==2.8.0
+anytree
 apscheduler
 aria2p
 asyncio
-beautifulsoup4
-bencoding
-cinemagoer
 cloudscraper
 dnspython
-pyrofork
 feedparser
 flask
 gevent
@@ -19,26 +14,23 @@ google-auth-httplib2
 google-auth-oauthlib
 gunicorn
 httpx
-langcodes
 lxml
 motor
-mutagen
-markdown
 natsort
 pillow
 psutil
-pybase64
-pycountry
 pycryptodome
+pymongo
+pyrofork
 python-dotenv
-pyshorteners
 python-magic
 qbittorrent-api
 requests
 speedtest-cli
 telegraph
 tenacity
-uv
+tgcrypto
+urllib3
 uvloop
 xattr
 yt-dlp
