changes to zmirror docker
Signed-off-by: clyfly <deni@xyradcloud.my.id>

--- a/config_sample.env
+++ b/config_sample.env
@@ -1,10 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
 BOT_TOKEN = ""                              # Require restart after changing it while bot running
 OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+TELEGRAM_API = "6"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
@@ -24,7 +22,7 @@ INCOMPLETE_TASK_NOTIFIER = "False"
 YT_DLP_OPTIONS = ""
 USE_SERVICE_ACCOUNTS = "False"
 NAME_SUBSTITUTE = ""
-SAFE_MODE = "25" # Duration time in second 
+SAFE_MODE = "0" # Duration time in second 
 # GDrive Tools
 GDRIVE_ID = ""
 IS_TEAM_DRIVE = "False"
